WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133077
Scrollbars display incorrectly after switching between fast and slow scrolling mode, affects Find and real sites
https://bugs.webkit.org/show_bug.cgi?id=133077
Summary
Scrollbars display incorrectly after switching between fast and slow scrollin...
Beth Dakin
Reported
2014-05-19 11:46:49 PDT
Scrollbars display incorrectly after switching between fast and slow scrolling mode, affects Find and real sites Example of a real site affected by this:
http://americanmccarver.com
<
rdar://problem/16888608
>
Attachments
Patch
(2.46 KB, patch)
2014-05-19 12:17 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-05-19 12:17:55 PDT
Created
attachment 231709
[details]
Patch
Beth Dakin
Comment 2
2014-05-19 14:09:51 PDT
Thanks Tim!
http://trac.webkit.org/changeset/169065
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug