Scrollbars display incorrectly after switching between fast and slow scrolling mode, affects Find and real sites https://bugs.webkit.org/show_bug.cgi?id=133077 -and corresponding- <rdar://problem/16888608>

Reviewed by Tim Horton.

We should always return true here when updating on the secondary thread is
supported. It does not need to be gated on whether we are actively taking
advantage of that support at this moment.
* platform/Scrollbar.cpp:
(WebCore::Scrollbar::supportsUpdateOnSecondaryThread):

Always update the presentationValue whenever we update the doubleValue just to
keep them in sync.
* platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::setPaintCharacteristicsForScrollbar):



Canonical link: https://commits.webkit.org/151107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169065 268f45cc-cd09-0410-ab3c-d52691b4dbfc